# CC4102

T1/: Dockerfile  Makefile  README.md  mergesort_cli  quicksort_cli  run_mergetest
T1/docs/: experiment.md  mergesort.md  quicksort.md
T1/include/: disk_io.hpp  utils.hpp
T1/src/: Dockerfile  buscar_aridad.cpp  disk_io.cpp  disk_io.hpp  experiment.cpp  experiments.cpp  experiments.hpp  external_mergesort.cpp  external_mergesort.hpp  external_quicksort.cpp  external_quicksort.hpp  main.cpp  main_mergesort.cpp  main_quicksort.cpp  mergesort.cpp  mergesort.hpp  quicksort.cpp  quicksort.hpp  utils.cpp  utils.hpp
T1/test/: generate_test_data.cpp  ordenado.cpp  test_mergesort.cpp  test_quicksort.cpp
cpp-sorting-algorithms/: CMakeLists.txt  README.md
cpp-sorting-algorithms/include/algorithms/: mergesort.h  quicksort.h
cpp-sorting-algorithms/include/utils/: file_handler.h  test_generator.h  timer.h
cpp-sorting-algorithms/src/algorithms/: mergesort.cpp  quicksort.cpp
cpp-sorting-algorithms/src/experiments/: benchmark.cpp  comparison.cpp
cpp-sorting-algorithms/src/utils/: file_handler.cpp  sort_parameters.cpp  test_generator.cpp  timer.cpp
cpp-sorting-algorithms/tests/: comparison_experiment.cpp  data_generator.cpp  experiment_runner.cpp  mergesort_experiment.cpp  optimal_arity_experiment.cpp  optimal_arity_finder.cpp  quicksort_experiment.cpp  test_mergesort.cpp  test_quicksort.cpp  visualize_arity.py  visualize_results.py
tarea-2/: .gitignore  Makefile  README.md  run_experiment.sh
tarea-2/graph/: generate_points.py  plot_results.py
tarea-2/src/: kruskal.cpp  kruskal.h  main.cpp  union_find.cpp  union_find.h  utils.cpp  utils.h
tarea-2/src/graph/: graph.py
tarea-2/tests/: test_main.cpp
test python/: import struct.py
